# si339-html-gen

./: .gitignore  .prettierrc.yaml  package-lock.json  package.json  pyproject.toml
html_gen/: __init__.py  __main__.py
html_gen/static/css/: _defaults.scss  _layout.scss  _utilities.scss  _vars.scss  defaults.scss  reset.css  styles.scss
html_gen/static/css/modules/: _back-btn.scss  _captioned-img.scss  _constrained-img.scss  _dropup.scss  _hero.scss  _home-grid.scss  _long-text.scss  _nav.scss  _photo-grid.scss
html_gen/static/data/: pets.json  recipes.json  travel.json
html_gen/static/js/: scripts.js
html_gen/templates/: base.html  index.html  recipes.html  travel.html
html_gen/templates/components/: nav.html
html_gen/templates/pet/: pet-detail.html
html_gen/templates/recipe/: recipe-detail.html
html_gen/templates/travel/: travel-detail.html
