[tool.poetry]
name = "html-gen"
version = "0.1.0"
description = ""
authors = ["Eric Xu <xeric.2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.7.0"}
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
